--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  
   <base href="/websitestrike/">
 
   <meta charset="UTF-8">
@@ -34,7 +35,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '720810619';
+    var serviceWorkerVersion = '2161908311';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -91,6 +92,7 @@
             loadMainDartJs();
           }
         }, 40);
+        //TODO: fix the service worker 
       });
     } else {
       // Service workers not supported. Just drop the <script> tag.
